[package]
name = "amoca-climate-insurance"
version = "0.2.3"
description = "Created with Bolt"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "amoca_climate_insurance"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["bolt-lang/idl-build"]
anchor-debug = ["bolt-lang/anchor-debug"]
custom-heap = []
custom-panic = []

[dependencies]
bolt-lang.workspace = true
